Fixed Dark Mode toggler overlapping when screen is shrunk less than 768px

--- a/docs/styles/theme.css
+++ b/docs/styles/theme.css
@@ -66,6 +66,6 @@ input:checked + .slider:before {
 
 @media (max-width: 768px) {
   .switch {
-    padding-right: 5%;
+    margin-right: 5%;
   }
 }
